<resources>
    <string name="app_name">FMVeículos</string>
    <string name="cadastro">Cadastro</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="cpf">CPF</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="email_vazio">Email vazio</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="senha_vazia">Senha vazia</string>
    <string name="entrar">Entrar</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="ainda_não_é_nosso_cliente">Ainda não é nosso cliente?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="interesse_confirmado">Interesse confirmado?</string>
    <string name="data_do_interesse">Data do interesse</string>
    <string name="preço_do_carro">Preço do carro</string>
    <string name="nome_do_carro">Nome do carro</string>
    <string name="nome_do_cliente_interessado">Nome do cliente interessado</string>
    <string name="atualizar_valor">Atualizar valor</string>
    <string name="preço">Preço</string>
    <string name="atualizar_quantidade">Atualizar quantidade</string>
    <string name="disponíveis">Disponíveis</string>
    <string name="timestamp">Timestamp</string>
    <string name="car_price">Car Price</string>
    <string name="status_icon">Status Icon</string>
    <string name="status">status:</string>
    <string name="car_name">Car Name</string>
    <string name="não">Não</string>
    <string name="sim">Sim</string>
    <string name="o_cliente_confirmou_o_interesse_no_veículo">O cliente confirmou o interesse no veículo?</string>
    <string name="confirmação">Confirmação</string>
    <string name="usuário">Usuário:</string>
    <string name="configurações">Configurações</string>
    <string name="enviar_email">Enviar Email</string>
    <string name="finalizar_reposição">Finalizar Reposição</string>
    <string name="imagem_do_produto">Imagem do Produto</string>
    <string name="quantidade">Quantidade</string>
    <string name="ano_de_lançamento">Ano de Lançamento</string>
    <string name="categoria">Categoria</string>
    <string name="marca">Marca</string>
    <string name="descrição">Descrição</string>
    <string name="modelo">Modelo</string>
    <string name="reposição">Reposição</string>
    <string name="interesses">Interesses</string>
    <string name="histórico">Histórico</string>
    <string name="dashboard">Dashboard</string>
    <string name="cliente">Cliente</string>
    <string name="catálogo">Catálogo</string>
    <string name="veículos">Veículos</string>
    <string name="detalhes">Detalhes</string>
    <string name="atualizar_campos">Atualizar Campos</string>
    <string name="entre_em_contato">Entre em contato</string>
    <string name="interessado">Interessado?</string>
    <string name="administrador">Administrador</string>
    <string name="fm_veículos">FM Veículos</string>
</resources>