<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:background="@drawable/card_background"
    android:padding="8dp">

    <TextView
        android:id="@+id/textCarName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:text="@string/car_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textCarName"
        android:text="@string/status"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/imageStatus"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/status_icon" />

    <TextView
        android:id="@+id/textCarPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textStatus"
        android:text="@string/car_price"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textCarPrice"
        android:text="@string/timestamp"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />
</RelativeLayout>
